<resources>
    <string name="app_name">声动互娱</string>

    <string name="app_agreement_page_title">个人信息保护指引</string>
    <string name="app_agreement_protection_tip1">声动互娱软件是一款用于向声网客户展示产品使用效果的测试产品，仅用于测试产品的功能、性能和可用性，而非提供给大众使用的正式产品。</string>
    <string name="app_agreement_protection_tip2">1.我们将依据《用户协议》及《隐私政策》来帮助您了解我们在收集、使用、存储您个人信息的情况以及您享有的相关权利。</string>
    <string name="app_agreement_protection_tip3">2.在您使用本测试软件时，我们将收集您的设备信息、日志信息等，同时根据不同使用场景，你可以授予我们获取您设备的麦克风权限、摄像头权限等信息。</string>
    <string name="app_agreement_protection_tip4">您可通过阅读完整的《用户协议》及《隐私政策》来了解详细信息。</string>
    <string name="app_agreement_protection_tip5">提示您注意：当您点击“同意”时，视为您已阅读并愿意接受《用户协议》和《隐私政策》的所有内容。当您点击“不同意”时，将无法体验声动互娱的完整功能。</string>
    <string name="app_agreement_protection_notice">选择“同意”，体验声动互娱完整功能</string>
    <string name="app_agreement_protection_alert">同意 用户协议 及 隐私政策 后，声动互娱才能为您提供协作服务。</string>
    <string name="app_agreement_the_user_agreement_and_privacy_policy">请同意用户协议和隐私政策</string>
    <string name="app_guide_chatroom">声动语聊</string>
    <string name="app_guide_chatroom_introduce">搭载声网最佳音效实践、最新音频技术的语聊房 带来更沉浸、更易用、更有趣的语聊体验</string>
    <string name="app_guide_ktv">在线K歌房</string>
    <string name="app_guide_ktv_introduce">一站式接入 20W+ 正版 K 歌热门曲库，灵活接入各类娱乐社交场景，激活多样 K 歌互动玩法</string>
    <string name="app_guide_live">直播超级画质</string>
    <string name="app_guide_live_introduce">视频『高清』升级，人更美、物更真，体验更流畅，为直播变现增添更多 buff</string>

    <string name="app_login_phone_login">手机号登录</string>
    <string name="app_login_i_agree">我已阅读并同意</string>
    <string name="app_login_user_agreement">《用户协议》</string>
    <string name="app_login_privacy_agreement">《隐私政策》</string>
    <string name="app_login_agreement_and">及</string>
    <string name="app_login_phone_input_title">注册/登录</string>
    <string name="app_login_phone_input_info">若手机号未注册，登录后会自动注册。</string>
    <string name="app_login_phone_input_input">请输入手机号</string>
    <string name="app_login_phone_input_next">获取验证码</string>
    <string name="app_login_phone_input_code">输入验证码</string>
    <string name="app_login_phone_input_code_info">已发送验证码至 +%1s %2s</string>
    <string name="app_login_code_wrong_tip">验证码输入错误</string>
    <string name="app_login_regain_code">重新获取验证码</string>
    <string name="app_login_count_down">%d s</string>

    <string name="app_home_full_scene">全部玩法</string>
    <string name="app_home_scene_ktv">在线K歌房</string>
    <string name="app_home_scene_voice">语聊房</string>
    <string name="app_home_scene_live">直播</string>
    <string name="app_home_scene_game">互动玩法</string>
    <string name="app_home_scene_aigc">AIGC</string>
    <string name="app_home_scene_live_merge">直播社交</string>
    <string name="app_home_scene_ktv_solo_chorus">独唱&amp;合唱</string>
    <string name="app_home_scene_ktv_solo_chorus_tips">超低延迟真合唱</string>
    <string name="app_home_scene_ktv_sing_battle">抢唱</string>
    <string name="app_home_scene_ktv_sing_battle_tips">热歌高潮片段</string>
    <string name="app_home_scene_ktv_cantata">大合唱</string>
    <string name="app_home_scene_ktv_cantata_tips">最高支持128人</string>
    <string name="app_home_scene_ktv_sing_relay">接唱</string>
    <string name="app_home_scene_ktv_sing_relay_tips">歌曲接龙</string>
    <string name="app_home_scene_voice_chatroom">语聊房</string>
    <string name="app_home_scene_voice_chatroom_tips">更沉浸、更有\n趣、更动听</string>
    <string name="app_home_scene_voice_spatial">语聊房-空\n间音频版</string>
    <string name="app_home_scene_voice_spatial_tips">方位感和空间感</string>
    <string name="app_home_scene_live_show">秀场</string>
    <string name="app_home_scene_live_show_tips">高清流畅人更美</string>
    <string name="app_home_scene_live_pure1v1">1v1私密房</string>
    <string name="app_home_scene_live_pure1v1_tips">秒接通&amp;秒出图</string>
    <string name="app_home_scene_live_multiplayer">多人团战</string>
    <string name="app_home_scene_live_multiplayer_tips">敬请期待</string>
    <string name="app_home_scene_live_show1v1">秀场转1v1\n私密房</string>
    <string name="app_home_scene_live_show1v1_tips">秒转场&amp;秒接通</string>
    <string name="app_home_scene_game_joy">弹幕玩法</string>
    <string name="app_home_scene_game_joy_tips">发弹幕 畅快玩</string>
    <string name="app_home_scene_game_leisure">休闲玩法</string>
    <string name="app_home_scene_game_leisure_tips">直播间 更好玩</string>
    <string name="app_home_scene_aigc_chatbot">AI 语聊</string>
    <string name="app_home_scene_aigc_chatbot_tips">时刻陪伴 畅所欲聊</string>

    <string name="app_title_home">玩法</string>
    <string name="app_title_find">发现</string>
    <string name="app_title_mine">我的</string>
    <string name="app_action_settings">设置</string>
    <string name="app_mine_accounts">我的账号</string>
    <string name="app_user_agreement">用户协议</string>
    <string name="app_privacy_agreement">隐私政策</string>
    <string name="app_third_party_info_data_sharing">三方信息共享清单</string>
    <string name="app_personal_info_collection_checklist">个人信息收集清单</string>
    <string name="app_about_us">关于我们</string>
    <string name="app_submit_feedback">提交反馈</string>
    <string name="app_debug_mode">开发者模式</string>
    <string name="app_exit">退出</string>
    <string name="app_and">及</string>
    <string name="app_confirm_deletion">确认删除？</string>
    <string name="app_please_input_account">请输入手机号</string>
    <string name="app_error_pwd_tip">8~20个字符，包含大、小写字母和数字</string>
    <string name="app_please_input_pwd">请输入密码</string>
    <string name="app_please_input_v_code">请输入验证码</string>
    <string name="app_forget_password">忘记密码</string>
    <string name="app_login">登录</string>
    <string name="app_finish">完成</string>
    <string name="app_register_account">注册账号</string>
    <string name="app_welcome_experience">欢迎体验声网服务</string>
    <string name="app_mobile_number">手机号</string>
    <string name="app_v_code">验证码</string>
    <string name="app_plus_86">+86</string>

    <string name="app_logout_account">退出登录</string>
    <string name="app_logoff_account">注销账号</string>
    <string name="app_logoff_account_tips">注销后，您将无法使用当前账号体验我们的服务，请谨慎考虑</string>
    <string name="app_logoff_confirm">确认注销</string>
    <string name="app_logoff_cancel">暂不注销</string>
    <string name="app_logout_confirm">退出登录</string>
    <string name="app_logout_cancel">\u3000取消\u3000</string>
    <string name="app_logout_account_tips">退出登录后，我们将保留您的数据信息，期待下次与您相遇</string>
    <string name="app_feedback_reason_crash">闪退</string>
    <string name="app_feedback_reason_audio_lag">音频卡顿</string>
    <string name="app_feedback_reason_video_lag">视频卡顿</string>
    <string name="app_feedback_reason_communication_exception">通信异常</string>
    <string name="app_feedback_reason_functional_construction">功能建议</string>
    <string name="app_feedback_reason_other">其他</string>
    <string name="app_feedback_describe">描述</string>
    <string name="app_feedback_input_tips">您的意见将帮助我们更快成长</string>
    <string name="app_feedback_upload">同时上传本机声动互娱通话日志</string>
    <string name="app_feedback_submit">提交</string>
    <string name="app_feedback_reason_empty_tips">请至少选择一个反馈类型再提交</string>
    <string name="app_feedback_image_limit">当前图片过大，必须小于5M</string>
    <string name="app_feedback_success">提交成功，感谢反馈</string>
    <string name="app_feedback_call_customer_service">如您的问题比较紧急，请致电客服</string>
    <string name="app_feedback_contact_the_customer_service">联系客服</string>
    <string name="app_find_scenario_solution">场景解决方案</string>
    <string name="app_find_integrated_document">集成文档</string>
    <string name="app_find_module_title">声动互娱-%s</string>
    <string name="app_find_module_doc_title">声动互娱-%s-集成文档</string>
    <string name="app_find_ktv_music_library">在线K歌房-声网曲库</string>
    <string name="app_find_ktv">在线K歌房</string>
    <string name="app_find_ktv_tips">一站式接入海量正版曲库，灵活接入各类娱乐社交场景</string>
    <string name="app_find_chatroom">语聊房</string>
    <string name="app_find_chatroom_tips">更纯净、更动听、更沉浸、更好玩的语聊互动体验</string>
    <string name="app_find_live">直播</string>
    <string name="app_find_live_tips">视频『高清』升级，人更美、物更真，体验更流畅</string>
    <string name="app_find_1v1">1v1</string>
    <string name="app_find_1v1_tips">通过随机匹配或主动邀约，实现 1v1 音视频通话</string>
    <string name="app_find_ai_engine">凤鸣AI引擎</string>
    <string name="app_find_ai_denoise">AI降噪</string>
    <string name="app_find_ai_denoise_tips">让实时互动远离干扰,实现纯净声音体验</string>
    <string name="app_find_ai_spatial">空间音频</string>
    <string name="app_find_ai_spatial_tips">身临其境的实时音频互动体验</string>
    <string name="app_find_virtual_sound">虚拟声卡2.0</string>
    <string name="app_find_virtual_sound_tips">0 成本一键美音，无忧社交，大胆开嗓</string>
    <string name="app_find_search_agora_music">点击检索\n声网曲库</string>

    <string name="app_voice_chat">语聊房</string>
    <string name="app_show_live">秀场直播</string>
    <string name="app_meta_live">元直播</string>
    <string name="app_meta_chatting">元语聊</string>
    <string name="app_interactive_games">互动游戏</string>
    <string name="app_one_to_one">1V1私密房</string>
    <string name="app_show_to_1v1">秀场转1V1私密房</string>
    <string name="app_coming_soon">敬请期待</string>
    <string name="app_voice_chat_spatial">空间音频</string>
    <string name="app_voice_chat_spatialTip">—空间音频模式</string>
    <string name="app_sing_relay">抢麦接唱</string>
    <string name="app_about_app">关于声动互娱</string>
    <string name="app_about_name">声动互娱</string>
    <string name="app_about_version">版本号</string>
    <string name="app_about_scene_version">场景版本号</string>
    <string name="app_about_chat_room">语聊房</string>
    <string name="app_about_chat_room_spatial">语聊房-空间音频模式</string>
    <string name="app_about_karaoke">在线K歌</string>
    <string name="app_about_show">秀场直播</string>
    <string name="app_about_singbattle">嗨歌抢唱</string>
    <string name="app_about_sing_relay">抢麦接唱</string>
    <string name="app_about_cantata">大合唱</string>
    <string name="app_about_pure1v1">1v1私密房</string>
    <string name="app_about_showTo1v1">秀场转1v1私密房</string>
    <string name="app_about_game">互动玩法</string>
    <string name="app_about_joy">声动互娱-弹幕玩法</string>
    <string name="app_about_play_zone">声动互娱-休闲玩法</string>
    <string name="app_about_aichat">AI陪伴</string>
    <string name="app_about_customer_service">联系客服</string>
    <string name="app_about_official_website">官网地址</string>
    <string name="app_about_phone_cancel">取消</string>
    <string name="app_mine_current_version">版本号：%s</string>

    <string name="app_debug_open">Debug模式已打开</string>
    <string name="app_debug_off">Debug模式已关闭</string>
    <string name="app_debug_switch">切换</string>
    <string name="app_debug_switch_env">切换服务器</string>
    <string name="app_release_env">正式环境</string>
    <string name="app_dev_env">测试环境</string>
    <string name="app_exit_debug">退出Debug模式</string>
    <string name="app_exit_debug_title">确定退出Debug模式么？</string>
    <string name="app_exit_debug_tip">退出debug模式后，设置页面将恢复成正常的设置页面哦～</string>
    <string name="app_agree_tip">请同意我们的隐私政策与用户协议</string>
    <string name="app_input_phonenum_tip">请输入正确的手机号</string>
    <string name="app_input_vcode_tip">请输入验证码</string>
    <string name="app_vcode_wrong_tip">验证码错误</string>
    <string name="app_login_success_tip">登录成功</string>
    <string name="app_login_failed_tip">登录失败</string>
    <string name="app_vcode_send_success_tip">验证码发送成功</string>
    <string name="app_vcode_send_failed_tip">验证码发送失败</string>
    <string name="app_edit_success">修改成功</string>
    <string name="app_upload_illegal_content_error">请勿上传非法内容</string>
    <string name="app_demo_test">本Demo仅限客户项目测试</string>
</resources>
